# me-dialect

./: 0-AI-MANIFEST.a2ml  ARCHITECTURE.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Justfile  Mustfile  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  config.ncl  deno.json  dep_analysis_cache_v2-shm  dep_analysis_cache_v2-wal  mustfile.toml  node_analysis_cache_v2-shm  node_analysis_cache_v2-wal  rescript.json  v8_code_cache_v2-shm  v8_code_cache_v2-wal
.githooks/: pre-commit
.github/workflows/: codeql.yml  hypatia-scan.yml  language-policy.yml  quality.yml  scorecard.yml
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.well-known/: security.txt
compiler/me-wasm/: Cargo.toml
compiler/me-wasm/src/: lib.rs
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
fuzz/: FuzzParser.res
grammar/: me-dialect.ebnf
spec/: README.adoc
src/: Main.res  Main.res.js  MeAstDump.res  MeAstDump.res.js  MeLanguage.res  MeLanguage.res.js  MeParser.res  MeParser.res.js  run.js
test/: MeTestRunner.res  MeTestRunner.res.js  MeTestUtils.res  MeTestUtils.res.js  MeTest_ASTConstruction.res  MeTest_ASTConstruction.res.js  MeTest_Conditionals.res.js  MeTest_EdgeCases.res.js  MeTest_Execution.res  MeTest_Execution.res.js  MeTest_Parser.res  MeTest_Parser.res.js  MeTest_Repetition.res  MeTest_Repetition.res.js  MeTest_ValueAndInterpolation.res  MeTest_ValueAndInterpolation.res.js  me_test.js
tools/: ast_dump.js
tools/lsp/: Cargo.toml
tools/lsp/src/: backend.rs  main.rs
verification/: README.adoc
(+74 files in other folders)
