# SPDX-License-Identifier: PMPL-1.0-or-later
# me-dialect-lsp — Language Server Protocol implementation for Me-Dialect.
#
# Me is an educational programming language for children (ages 8-12) that
# uses HTML-like XML syntax with tags like <say>, <remember>, <choose>.
# This LSP provides tag/attribute completion, unclosed-tag diagnostics,
# hover documentation, and document symbol listing.

[package]
name = "me-dialect-lsp"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "LSP server for the Me-Dialect children's programming language"
repository = "https://github.com/hyperpolymath/nextgen-languages"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]

[[bin]]
name = "me-dialect-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
